[package]
name = "vlive"
version = "0.1.2"
authors = ["drklee3 <dlee3@scu.edu>"]

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
chrono = "^0.4"
regex = "^0.2"
lazy_static = "^1.0.0"

[dependencies.hyper]
optional = true
version = "^0.11"

[dependencies.futures]
optional = true
version = "^0.1"

[dependencies.reqwest]
optional = true
version = "^0.8"

[dev-dependencies]
tokio-core = "~0.1"

[features]
default = ["reqwest-support"]
hyper-support = ["hyper", "futures"]
reqwest-support = ["reqwest"]
