[package]
name = "vlive"
edition = "2018"
version = "0.2.0"
authors = ["drklee3 <derrick@dlee.dev>"]
license = "ISC"
description = "VLive API wrapper for Rust"
repository = "https://github.com/drklee3/vlive-rs"
readme = "README.md"

[dependencies]
serde_derive = "^1.0"
serde_json = "^1.0"
regex = "^0.2"
lazy_static = "^1.0.0"
async-trait = "0.1.41"
scraper = "0.12.0"

[dependencies.reqwest]
version = "^0.10"
features = ["json"]

[dependencies.chrono]
version = "^0.4"
features = ["serde"]

[dependencies.serde]
version = "^1.0"
features = ["derive"]

[dev-dependencies.tokio]
version = "0.2"
features = ["full"]
